--- a/frontend/views/archival_objects/_form_container.html.erb
+++ b/frontend/views/archival_objects/_form_container.html.erb
@@ -12,9 +12,11 @@
 <%= render_aspace_partial :partial => "shared/form_messages", :locals => {:form => form} %>
 
 
-  <%= form.hidden_input "parent", nil, {"data-base-name" => "archival_object[parent]", "class" => "hidden-parent-uri"} %>
-  <%= form.hidden_input "resource" %>
-
+  <%# form.hidden_input "parent", nil, {"data-base-name" => "archival_object[parent]", "class" => "hidden-parent-uri"} %>
+  <%= form.hidden_input "parent", nil, {"data-base-name" => "archival_object[parent]", "class" => "hidden-parent-uri", "data-browse-url-html" => url_for(:controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.ARCHIVAL_OBJECT_FACETS), "data-browse-url-json" => url_for(:controller => :search, :action => :do_search, :format => :json, :facets => SearchResultData.ARCHIVAL_OBJECT_FACETS), "data-modal-title" => I18n.t('archival_object._frontend.action.select_parent_and_position'), "data-leave-empty" => I18n.t('archival_object._frontend.action.leave_parent_empty')} %>
+  <%# form.hidden_input "resource" %>
+  <%= form.hidden_input "resource", nil, {"data-browse-url-html" => url_for(:controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.RESOURCE_FACETS), "data-browse-url-json" => url_for(:controller => :search, :action => :do_search, :format => :json, :facets => SearchResultData.RESOURCE_FACETS), "data-modal-title" => I18n.t('archival_object._frontend.action.select_resource')} %>
+  <%= form.hidden_input "position" %>
   <%= hidden_field_tag "id", @archival_object.id %>
   <%= hidden_field_tag "uri", @archival_object.uri %>
 
@@ -26,6 +28,9 @@
       </h4>
 
       <fieldset>
+        <%= render_plugin_partials("top_of_basic_information_archival_object",
+                                   :form => form,
+                                   :record => @archival_object) %>
         <%= form.label_and_textarea("title", :required => :conditionally)%>
 
         <% if form.obj["ref_id"].blank? %>
@@ -33,15 +38,19 @@
         <% else %>
           <%= form.label_with_field "ref_id", form.hidden_input("ref_id") + "<span class='identifier-display'><span class='identifier-display-part'>#{form.obj["ref_id"]}</span></span>".html_safe %>
         <% end %>
+        <%= render_aspace_partial :partial => "shared/slug", :locals => {:form => form, :record_type => @archival_object} if AppConfig[:use_human_readable_urls] %>
+
         <%= form.hidden_input "ref_id" %>
         <% if form.obj["component_id"].blank? %>
           <%= form.label_and_readonly "component_id", "<em>#{I18n.t("archival_object.component_id_auto_generation_message")}</em>" %>
         <% else %>
           <%= form.label_and_textfield("component_id") %>
         <% end %>
+        <%= form.label_and_textfield "external_ark_url" if AppConfig[:arks_enabled] && AppConfig[:arks_allow_external_arks] %>
+
         <%= form.label_and_select "level", form.possible_options_for("level", true) %>
         <%= form.label_and_textfield "other_level", :required => true %>
-        <%= form.label_and_select "language", form.possible_options_for("language", true) %>
+       
         <div class="form-group">
           <%= form.label "publish", :class => 'control-label col-sm-2' %>
           <div class="checkbox col-sm-9">
@@ -53,16 +62,23 @@
         </div>
         <%= form.label_and_boolean "restrictions_apply", {}, form.default_for("restrictions_apply") %>
         <%= form.label_and_textarea "repository_processing_note" %>
+        <%= render_plugin_partials("basic_information_archival_object",
+                                   :form => form,
+                                   :record => @archival_object) %>
+
       </fieldset>
     </section>
   <% end %>
 
   <% form.emit_template("archival_object") %>
 
+  <%= render_aspace_partial :partial => "shared/subrecord_form", :locals => {:form => form, :name => "lang_materials", :custom_action_template => "lang_materials/subrecord_form_action"} %>
   <%= render_aspace_partial :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates", :required => :conditionally, :template => "archival_record_date"} %>
   <%= render_aspace_partial :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
 
   <%= render_aspace_partial :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "archival_object_linked_agent"} %>
+  
+  <%= render_aspace_partial :partial => "shared/subrecord_form", :locals => {:form => form, :name => "accession_links", :template => "component_accession_links"} %>
   <%= render_aspace_partial :partial => "shared/subrecord_form", :locals => {:form => form, :name => "subjects", :template => "subrecord_subject"} %>
 
   <%= render_aspace_partial :partial => "notes/form", :locals => {:form => form, :all_note_types => note_types_for(form['jsonmodel_type'])} %>
